[project]
name = "unisim"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["unisim*"]

[project.entry-points.'nerfstudio.method_configs']
unisim = 'unisim.unisim_config:unisim'
unisim_plusplus = 'unisim.unisim_config:unisim_plusplus'

[tool.ruff]
line-length = 120
ignore = [
    "F722",  # Forward annotation false positive from jaxtyping. Should be caught by pyright.
]
